--- a/src/main/resources/com/company/cssjmixtutorial/messages_en.properties
+++ b/src/main/resources/com/company/cssjmixtutorial/messages_en.properties
@@ -13,6 +13,8 @@ com.company.cssjmixtutorial.entity/User.timeZoneId=Time zone
 com.company.cssjmixtutorial.entity/User.username=Username
 com.company.cssjmixtutorial.entity/User.version=Version
 
+com.company.cssjmixtutorial.screen.home/homeScreen.caption=Home screen
+
 com.company.cssjmixtutorial.screen.login/badCredentials = Unknown login name or bad password
 com.company.cssjmixtutorial.screen.login/caption = Sample
 com.company.cssjmixtutorial.screen.login/emptyUsernameOrPassword=Please enter user name and password
