--- a/src/main/resources/com/company/cssjmixtutorial/messages_en.properties
+++ b/src/main/resources/com/company/cssjmixtutorial/messages_en.properties
@@ -30,6 +30,8 @@ com.company.cssjmixtutorial.screen.main/application.logoLabel = Css Jmix Tutoria
 com.company.cssjmixtutorial.screen.main/sideMenuCollapse = Collapse menu
 com.company.cssjmixtutorial.screen.main/logoutBtnDescription = Logout
 
+com.company.cssjmixtutorial.screen.product/productScreen.caption=Product screen
+
 com.company.cssjmixtutorial.screen.user/UserBrowse.caption=Users
 com.company.cssjmixtutorial.screen.user/UserEdit.caption=User editor
 com.company.cssjmixtutorial.screen.user/additional=Additional
