--- a/src/main/resources/com/company/cssjmixtutorial/messages_en.properties
+++ b/src/main/resources/com/company/cssjmixtutorial/messages_en.properties
@@ -2,6 +2,8 @@ localeDisplayName.en=English
 
 databaseUniqueConstraintViolation.IDX_USER__ON_USERNAME=A user with the same username already exists
 
+com.company.cssjmixtutorial.entity/Product=Product
+com.company.cssjmixtutorial.entity/Product.id=Id
 com.company.cssjmixtutorial.entity/User=User
 com.company.cssjmixtutorial.entity/User.active=Active
 com.company.cssjmixtutorial.entity/User.email=Email
