update product page

--- a/src/main/resources/com/company/cssjmixtutorial/messages_en.properties
+++ b/src/main/resources/com/company/cssjmixtutorial/messages_en.properties
@@ -32,6 +32,9 @@ com.company.cssjmixtutorial.screen.main/application.logoLabel = Css Jmix Tutoria
 com.company.cssjmixtutorial.screen.main/sideMenuCollapse = Collapse menu
 com.company.cssjmixtutorial.screen.main/logoutBtnDescription = Logout
 
+com.company.cssjmixtutorial.screen.product/productBrowse.caption=Products
+com.company.cssjmixtutorial.screen.product/productBrowse.menu=Products
+com.company.cssjmixtutorial.screen.product/productEdit.caption=Product editor
 com.company.cssjmixtutorial.screen.product/productScreen.caption=Product screen
 
 com.company.cssjmixtutorial.screen.user/UserBrowse.caption=Users
